# FloatClip

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bubble.html  build-windows.bat  index.html  package-lock.json  package.json  settings.html  vite.config.js
src/: bubble.js  main.js  settings.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  lib.rs  main.rs
